<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.professorjiujitsuadmin.activity.FormLogin.Fragments.alunos.AlunosFragment"
        android:label="@string/menu_aluno"
        tools:layout="@layout/fragment_alunos" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.professorjiujitsuadmin.activity.FormLogin.Fragments.mensalidade.MensalidadeFragment"
        android:label="@string/menu_mensalidades"
        tools:layout="@layout/fragment_mensalidades" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.professorjiujitsuadmin.activity.FormLogin.Fragments.comprovantes.ComprovanteFragment"
        android:label="@string/menu_Comprovantes"
        tools:layout="@layout/fragment_comprovante" />
</navigation>